@@ -18,6 +18,10 @@
     <version>1.10.0-SNAPSHOT</version>
 
     <properties>
+        <!-- TODO W-16452921: remove this -->
+        <javaVersion>1.8</javaVersion>
+        <javaReleaseVersion>8</javaReleaseVersion>
+
         <!-- Add visibility required by the tests exclusively -->
         <surefire.args>
             -XX:+IgnoreUnrecognizedVMOptions
@@ -28,7 +32,6 @@
             --add-exports=org.mule.runtime.core/org.mule.runtime.core.internal.registry=ALL-UNNAMED
             --add-exports=org.mule.runtime.core/org.mule.runtime.core.internal.serialization=ALL-UNNAMED
             --add-exports=org.mule.runtime.core/org.mule.runtime.core.privileged.registry=ALL-UNNAMED
-            --add-exports=org.mule.runtime.core/org.mule.runtime.core.privileged.security.tls=ALL-UNNAMED
               --add-opens=jakarta.mail/com.sun.mail.util=org.mule.service.http
             ${surefire.test.unit.open.args}
         </surefire.args>
@@ -52,6 +55,42 @@
 
     <build>
         <plugins>
+            <!-- TODO W-16452921: remove this -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>default-compile</id>
+                        <configuration>
+                            <release>11</release>
+                            <!-- no excludes: compile everything to ensure module-info contains right entries -->
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>base-compile</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <release>${javaReleaseVersion}</release>
+                            <!-- recompile everything for target VM except the module-info.java -->
+                            <excludes>
+                                <exclude>module-info.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </execution>
+                </executions>
+                <configuration>
+                    <source>${javaVersion}</source>
+                    <target>${javaVersion}</target>
+                    <release>${javaReleaseVersion}</release>
+                    <testSource>${javaVersion}</testSource>
+                    <testTarget>${javaVersion}</testTarget>
+                    <testRelease>${javaReleaseVersion}</testRelease>
+                    <parameters>true</parameters>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.mule.runtime.plugins</groupId>
                 <artifactId>mule-service-maven-plugin</artifactId>
